--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bin/
 
 # OS generated files
 .DS_Store
+Thumbs.db
 
 # Node.js
 node_modules/
@@ -14,3 +15,16 @@ dist/
 .idea/
 *.swp
 *.bak
+
+# Logs
+*.log
+npm-debug.log*
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Cache
+.cache/
+.eslintcache
