--- a/fly.toml
+++ b/fly.toml
@@ -1,24 +1,30 @@
-# fly.toml app configuration file generated for ticket-masala-marketing on 2025-12-22T13:53:16+01:00
+# fly.toml app configuration file generated for ticket-masala on 2025-12-23T10:53:15+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'ticket-masala-marketing'
+app = 'ticket-masala'
 primary_region = 'iad'
 
 [build]
-  dockerfile = 'Dockerfile'
+dockerfile = 'Dockerfile'
 
 [http_service]
-  internal_port = 80
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 8080
+force_https = true
+auto_stop_machines = 'stop'
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
+
+[[http_service.checks]]
+grace_period = "5s"
+interval = "30s"
+method = "GET"
+timeout = "5s"
+path = "/health"
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
-  memory_mb = 1024
+memory = '256mb'
+cpu_kind = 'shared'
+cpus = 1
