Refactor deployment configurations and scripts, add tenant-specific favicons, and remove obsolete documentation and temporary files.

--- a/deploy/fly.desgoffe-api.toml
+++ b/deploy/fly.desgoffe-api.toml
@@ -2,7 +2,7 @@ app = "ticket-masala-api-desgoffe"
 primary_region = "ams"
 
 [build]
-context = "../ticket-masala"
+context = "../../ticket-masala"
 dockerfile = "Dockerfile"
 
 [env]
