--- a/deploy/fly.toml
+++ b/deploy/fly.toml
@@ -7,7 +7,7 @@ app = 'ticket-masala'
 primary_region = 'iad'
 
 [build]
-dockerfile = 'Dockerfile'
+dockerfile = '../Dockerfile'
 
 [http_service]
 internal_port = 8080
