build: replace Fly.io build context and dockerfile with direct image pull

--- a/deploy/fly.whitman-api.toml
+++ b/deploy/fly.whitman-api.toml
@@ -2,8 +2,7 @@ app = "ticket-masala-api-whitman"
 primary_region = "ams"
 
 [build]
-context = "../../ticket-masala"
-dockerfile = "Dockerfile"
+  image = "ghcr.io/garamatic/ticket-masala:latest"
 
 [env]
 ASPNETCORE_ENVIRONMENT = "Production"
