feat: Introduce GitHub Actions workflow to build and deploy the portal image, and configure Fly.io apps to use the published image.

--- a/deploy/fly.whitman-portal.toml
+++ b/deploy/fly.whitman-portal.toml
@@ -2,7 +2,7 @@ app = "ticket-masala-portal-whitman"
 primary_region = "ams"
 
 [build]
-dockerfile = "Dockerfile.tenant"
+  image = "ghcr.io/garamatic/ticket-masala-portal:latest"
 
 [env]
 MASALA_TENANT_ID = "whitman"
