--- a/docker-compose.ecosystem.yml
+++ b/docker-compose.ecosystem.yml
@@ -94,3 +94,35 @@ services:
       - "8084:8080"
     depends_on:
       - api-hennessey
+  # ════════════════════════════════════════════════════════════
+  # 🛡️ GATEKEEPER (INGESTION)
+  # ════════════════════════════════════════════════════════════
+  gatekeeper:
+    image: ghcr.io/garamatic/gatekeeper-api:latest
+    container_name: masala_gatekeeper
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+      - Gatekeeper__ApiKey=masala-secret-key
+    ports:
+      - "5099:8080" # Ingestion endpoint
+
+  # ════════════════════════════════════════════════════════════
+  # 📊 MONITORING (OBSERVABILITY)
+  # ════════════════════════════════════════════════════════════
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: masala_prometheus
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: masala_grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - prometheus
