--- a/.github/workflows/portal-publish.yml
+++ b/.github/workflows/portal-publish.yml
@@ -71,7 +71,7 @@ jobs:
         run: |
           for tenant in desgoffe whitman liberty hennessey; do
             echo "🚀 Deploying portal to $tenant..."
-            flyctl deploy --app ticket-masala-portal-$tenant --image ghcr.io/garamatic/ticket-masala-portal:latest --region ams --yes
+            flyctl deploy --app ticket-masala-portal-$tenant --image ghcr.io/garamatic/ticket-masala-portal:latest --primary-region ams --yes
           done
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
