--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "test": "vitest run",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.js",
@@ -32,10 +33,12 @@
   "devDependencies": {
     "autoprefixer": "^10.4.23",
     "eslint": "^8.57.0",
+    "jsdom": "^27.4.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.17",
     "vite": "^5.2.0",
-    "vite-plugin-handlebars": "^2.0.0"
+    "vite-plugin-handlebars": "^2.0.0",
+    "vitest": "^4.0.16"
   }
 }
