feat: add live demos section and configuration viewer
- Add new "Live Demos" section showcasing tenant-specific implementations
- Create config viewer page for inspecting tenant configurations
- Update build process to include post-build script for config copying
- Enhance theme handling and internationalization support
- Improve error handling in portal form submission
- Update API endpoints to new Azure Container Apps deployment
- Add demo profiles to tenant configuration files
- Improve accessibility and styling across components

--- a/tenants/desgoffe/config/masala_config.json
+++ b/tenants/desgoffe/config/masala_config.json
@@ -20,5 +20,22 @@
         "Anticipation": {
             "IsEnabled": false
         }
+    },
+    "PerformanceProfile": {
+        "TargetResponseMsP95": 300,
+        "TargetResolutionHoursP80": 120,
+        "SlaDescription": "Les demandes citoyennes sont priorisées selon le type, le quartier et la priorité déclarée."
+    },
+    "DemoProfiles": {
+        "Standard": {
+            "Description": "Traitement équilibré de toutes les demandes avec priorisation par urgence administrative.",
+            "RankingStrategy": "SeverityAndPriority",
+            "DispatchingStrategy": "ServiceBased"
+        },
+        "NuisanceFocus": {
+            "Description": "Profil axé sur les nuisances sonores et de voisinage avec résolution accélérée.",
+            "RankingStrategy": "NoiseComplaintsFirst",
+            "DispatchingStrategy": "NeighborhoodInspector"
+        }
     }
 }
