--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/Garamatic/masala-web#readme",
   "devDependencies": {
+    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.23",
     "eslint": "^8.57.0",
     "jsdom": "^27.4.0",
